fix label overflow of graph on progress page (#171)

--- a/lms/static/sass/pages/_dashboard.scss
+++ b/lms/static/sass/pages/_dashboard.scss
@@ -369,3 +369,9 @@ div#unenroll-modal {
     border: $cta-button-border;
   }
 }
+
+.profile-wrapper .tickLabel {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
